# XamppTray

./: .gitignore  CLAUDE.md  README.md  install-autostart.sh  main.py  pyproject.toml  requirements-dev.txt  run.sh  xampp-tray_2.0.0_all.deb  xampp-tray_2.1.2_all.deb
.claude/: settings.local.json
docs/: PLAN.md  plano-de-implementacao.md
packaging/: build-deb.sh
packaging/deb-pkg/DEBIAN/: changelog  control  postinst  postrm  prerm
packaging/deb-pkg/etc/xdg/autostart/: xampp-tray.desktop
packaging/deb-pkg/usr/share/metainfo/: xampp-tray.desktop.metainfo.xml
packaging/deb-pkg/usr/share/xampp-tray/: uninstall-clean.sh
src/xampp_tray/: __main__.py  app.py  config.py  constants.py  history.py  icon.py  menu.py  notifications.py  service.py  status.py
tests/: conftest.py  test_config.py  test_history.py  test_icon.py  test_service.py  test_status.py
